Aktualisieren von atlas.yml

--- a/atlas.yml
+++ b/atlas.yml
@@ -1,3 +1,4 @@
 wood:
 stone:
-  - "#materials:group/stone_blocks": 2: 5
+  - "#materials:group/stone_blocks": [1.5, 3]
+  - "#materials:group/cobblestone_blocks": [2, 2]
