Aktualisieren von atlas.yml

--- a/atlas.yml
+++ b/atlas.yml
@@ -4,3 +4,6 @@ stone:
       - "#materials:variants/clean_stone_blocks": 3
     2:
       - "#materials:variants/cobblestone_blocks": 2
+    1.5:
+      - "#materials:variants/quartz_blocks": 2
+      - "minecraft:amethyst_block": 1.58
