--- a/beet.yml
+++ b/beet.yml
@@ -3,8 +3,7 @@ data_pack:
     - src
 output: .
 require:
-  - beetsmith.requirements
   - plugin.tag_building_requirements
 pipeline:
-  # - plugin.main
+  - plugin.main
   - plugin.build_tags
