--- a/beet.yml
+++ b/beet.yml
@@ -7,6 +7,8 @@ resource_pack:
 output: .
 require:
   - plugin.tag_building_requirements
+  - beet.contrib.optifine
 pipeline:
   # - plugin.main
   - plugin.build_tags
+  - slicer.main
