tags -> tags/block

--- a/Caveman/items/iron_pickaxe.yml
+++ b/Caveman/items/iron_pickaxe.yml
@@ -3,30 +3,16 @@ name:
 model: minecraft:iron_pickaxe
 components:
   tool:
-    # On multiple overriding matches: First is chosen
-    - blocks: "#materials:tier/iron/cannot_mine"
-      correct_for_drops": false
-    #
-    # Here are missing rules for all desired hardnesses
-    #
-    - blocks: "#minecraft:mineable/pickaxe"
-      correct_for_drops": true
-      speed: 6.0
-
-
-behavior:
-  - damagable:
-      durability: 250
-      #repair_materials: ["minecraft:iron_tool_materials"]
-  - weapon:
-      attack_damage: 4
-      attack_speed: 1.2
-      can_sweep: false
-      item_damage_per_attack: 2
-  - enchantable:
-      enchantability: 14
-      enchantable_tag: "minecraft:pickaxes"
-  - rarity:
-      rarity: common
+    rules:
+      # On multiple overriding matches: First is chosen
+      - blocks: "#materials:tier/iron/cannot_mine"
+        correct_for_drops: false
+      #
+      # Here are missing rules for all desired hardnesses
+      #
+      - blocks: "#minecraft:mineable/pickaxe"
+        correct_for_drops: true
+        speed: 6.0
+    can_destroy_blocks_in_creative: false
 type: CustomItem
 id: minecraft:iron_pickaxe
