--- a/beet.yml
+++ b/beet.yml
@@ -7,7 +7,8 @@ resource_pack:
 output: .
 require:
   - beet.contrib.optifine
+  - beet.contrib.auto_yaml
 pipeline:
-  - caveman.implement_pickaxes
   - caveman.build_tags
+  - caveman.implement_pickaxes
   - ctm_slicer
