--- a/GAM/assets/minecraft/optifine/ctm/netherrack_gangue/netherrack_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/netherrack_gangue/netherrack_gangue.properties
@@ -2,5 +2,5 @@ matchBlocks=nether_quartz_ore
 method=overlay
 tiles=0-16
 connect=block
-connectBlocks=netherrack
+connectBlocks=netherrack ancient_debris
 layer=cutout
