--- a/GAM/assets/minecraft/optifine/ctm/deepslate_gangue/deepslate_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/deepslate_gangue/deepslate_gangue.properties
@@ -1,6 +1,6 @@
-matchBlocks=lapis_ore deepslate_lapis_ore
+matchBlocks=lapis_ore deepslate_lapis_ore raw_iron_block raw_copper_block raw_gold_ore coal_ore deepslate_coal_ore
 method=overlay
 tiles=0-20
 connect=block
-connectBlocks=deepslate
+connectBlocks=deepslate deepslate_gold_ore deepslate_iron_ore deepslate_emerald_ore deepslate_redstone_ore deepslate_diamond_ore
 layer=cutout
