--- a/GAM/assets/minecraft/optifine/ctm/netherrack_gangue/netherrack_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/netherrack_gangue/netherrack_gangue.properties
@@ -2,5 +2,5 @@ matchBlocks=nether_quartz_ore
 method=overlay
 tiles=0-16
 connect=block
-connectBlocks=netherrack ancient_debris
+connectBlocks=netherrack ancient_debris warped_nylium nether_gold_ore crimson_nylium
 layer=cutout
