--- a/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
@@ -1,4 +1,4 @@
-matchBlocks=coal_ore deepslate_lapis_ore calcite raw_copper_block raw_gold_block raw_iron_block
+matchBlocks=coal_ore deepslate_lapis_ore calcite raw_copper_block raw_gold_block raw_iron_block deepslate
 method=overlay
 tiles=0-16
 connect=block
