--- a/GAM/assets/minecraft/optifine/ctm/deepslate_gangue/deepslate_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/deepslate_gangue/deepslate_gangue.properties
@@ -1,4 +1,4 @@
-matchBlocks=lapis_ore deepslate_lapis_ore raw_iron_block raw_copper_block raw_gold_ore coal_ore deepslate_coal_ore
+matchBlocks=lapis_ore deepslate_lapis_ore raw_iron_block raw_copper_block raw_gold_ore coal_ore deepslate_coal_ore diorite granite tuff andesite dripstone_block
 method=overlay
 tiles=0-20
 connect=block
