--- a/Caveman/atlas.yml
+++ b/Caveman/atlas.yml
@@ -46,7 +46,7 @@ copper:
         - "minecraft:coal_block": 5
         - "minecraft:deepslate_coal_ore": 4.5
         - "minecraft:magma_block": 0.5
-        - "minecraft:iron_ore"
+        - "minecraft:iron_ore": 3
 
 iron:
     4:
