--- a/beet.yml
+++ b/beet.yml
@@ -8,6 +8,11 @@ output: .
 require:
   - beet.contrib.optifine
 pipeline:
-  - caveman.build_tags
-  - caveman.implement_pickaxes
-  - ctm_slicer
+  - plugins.caveman.build_tags
+  - plugins.caveman.implement_pickaxes
+  - plugins.ctm_slicer
+meta:
+  plugins.caveman.build_tags:
+    atlas: Caveman/atlas.yml
+  plugins.caveman.implement_pickaxes:
+    atlas: Caveman/pickaxes.yml
