--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "**/Thumbs.db": true,
         "__pycache__": true,
         ".beet_cache": true,
-        ".vscode": true
+        ".vscode": true,
+        "plugins/__pycache__": true
     },
     "hide-files.files": [
         "__pycache__",
