--- a/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
@@ -1,6 +1,6 @@
-matchBlocks=coal_ore deepslate_lapis_ore deepslate_gold_ore deepslate_emerald_ore deepslate_copper_ore deepslate_diamond_ore deepslate_redstone_ore calcite raw_copper_block raw_gold_block raw_iron_block deepslate diorite granite tuff andesite dripstone_block
+matchBlocks=coal_ore deepslate_lapis_ore deepslate_gold_ore deepslate_emerald_ore deepslate_copper_ore deepslate_diamond_ore deepslate_redstone_ore calcite raw_copper_block raw_gold_block raw_iron_block deepslate diorite granite tuff andesite dripstone_block lapis_ore
 method=overlay
 tiles=0-16
 connect=block
 connectBlocks=stone iron_ore copper_ore gold_ore redstone_ore emerald_ore diamond_ore infested_stone
-layer=cutout_mipped
+layer=cutout
