--- a/beet.yml
+++ b/beet.yml
@@ -6,11 +6,11 @@ resource_pack:
   load:
     - GAM
     - More Copper Uses
-    - Winter Leafs
+    # - Winter Leafs
 output: .
-require:
+# require:
   # - beet.contrib.optifine
-  - plugins.optifine_extended
+  # - plugins.optifine_extended
 pipeline:
   - plugins.caveman
   - plugins.auto_ctm_slicer
