--- a/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
+++ b/GAM/assets/minecraft/optifine/ctm/stone_gangue/stone_gangue.properties
@@ -1,4 +1,4 @@
-matchBlocks=coal_ore deepslate_lapis_ore deepslate_gold_ore deepslate_emerald_ore deepslate_copper_ore deepslate_diamond_ore deepslate_redstone_ore calcite raw_copper_block raw_gold_block raw_iron_block deepslate diorite granite tuff andesite dripstone_block lapis_ore
+matchBlocks=coal_ore deepslate_coal_ore deepslate_lapis_ore deepslate_gold_ore deepslate_emerald_ore deepslate_copper_ore deepslate_diamond_ore deepslate_redstone_ore calcite raw_copper_block raw_gold_block raw_iron_block deepslate diorite granite tuff andesite dripstone_block lapis_ore
 method=overlay
 tiles=0-16
 connect=block
