--- a/beet.yml
+++ b/beet.yml
@@ -7,6 +7,7 @@ resource_pack:
     - GAM
     - More Copper Uses
     # - Winter Leafs
+  zipped: true
 output: .
 require:
   # - beet.contrib.optifine
